Replace source links with my GitHub organization
Change-Id: I22d7304fb443e88680a09342a6d984edbf0a365d
Signed-off-by: Omar Mohamed <omarcoptan9@gmail.com>

--- a/_includes/deviceinfo.html
+++ b/_includes/deviceinfo.html
@@ -271,7 +271,11 @@
                 <li>
                     {{ device.kernel.version }}
                     {%- if device.kernel.repo %}
+                    {%- if device.kernel.repo == "android_device_xiaomi_garnet-kernel" %} <!-- Garnet Device UNOFFICIAL -->
+                    (<a href="https://github.com/garnet-playground/{{ device.kernel.repo }}">source code</a>)
+                    {%- else %}
                     (<a href="https://github.com/LineageOS/{{ device.kernel.repo }}">source code</a>)
+                    {%- endif %}
                     {%- endif %}
                 </li>
             </ul>
